[MINOR] Add JDK11 options