@@ -106,7 +106,19 @@ class SparkClassCommandBuilder extends AbstractCommandBuilder {
       }
       addOptionString(cmd, envValue);
     }
-
+    int majorVersion = Integer.parseInt(System.getProperty("java.version").split("\\D+")[0]);
+    if (majorVersion >= 9) {
+      String JDK11_OPTIONS =
+        "--add-opens java.base/java.lang.invoke=ALL-UNNAMED " +
+        "--add-opens java.base/java.nio=ALL-UNNAMED " +
+        "--add-opens java.base/java.net=ALL-UNNAMED " +
+        "--add-opens java.base/java.util=ALL-UNNAMED " +
+        "--add-opens java.base/jdk.internal.misc=ALL-UNNAMED " +
+        "--add-opens java.base/sun.nio.ch=ALL-UNNAMED " +
+        "--add-opens java.security.jgss/sun.security.krb5=ALL-UNNAMED " +
+        "-Dio.netty.tryReflectionSetAccessible=true";
+      addOptionString(cmd, JDK11_OPTIONS);
+    }
     String mem = firstNonEmpty(memKey != null ? System.getenv(memKey) : null, DEFAULT_MEM);
     cmd.add("-Xmx" + mem);
     cmd.add(className);
